<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bomberman2</string>
    <string name="hello_world">Hello world!</string>
    <string name="splashDevelopers">Yet another bomberman game by \n\n Daniel Bali, Gayana Chandrasekara, Seçkin Savaşçı </string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="action_settings">Settings</string>
    <string name="game_name">Bomberman</string>
    <string name="play_singleplayer_button">Play Now!</string>
    <string name="play_multiplayer_button">Play with Friends!</string>
    <string name="player_name">Unknown Player</string>
    <string name="title_activity_bombing">BombingActivity</string>
    <string name="player_name_label">Player Name</string>
    <string name="player_count_label">Players</string>
    <string name="player_score_label">Score</string>
    <string name="time_left_label">Time</string>
    <string name="highscore">Scoreboard</string>

    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>

</resources>
