<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/white"
    tools:context="pt.tecnico.ulisboa.cmov.emdc.dgs.bomberman.MainMenuActivity">

    <LinearLayout
        android:id="@+id/play_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center" >

        <Button
            android:id="@+id/playSinglePlayerButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/play_singleplayer_button" />

        <Button
            android:id="@+id/playMultiPlayerButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/play_multiplayer_button" />


    </LinearLayout>




    <EditText
        android:id="@+id/playerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/play_layout"
        android:layout_alignLeft="@id/play_layout"
        android:layout_alignRight="@id/play_layout"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/player_name"
        android:focusableInTouchMode="true"
        android:singleLine="true">

        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/gameLogo"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/bomberman" />

    <TextView
        android:id="@+id/gameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/game_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />
</RelativeLayout>
